# earningscall_rag

./: .env.example  .gitignore  DEVLOG.md  LEARN.md  README.md  flow.md  pyproject.toml
reports/: eval_dataset_preview.json  eval_summary.md
scripts/: dev_small.sh  run_data_pipeline.sh
src/: __init__.py  config.py
src/app/: __init__.py  streamlit_app.py
src/data/: __init__.py  chunking.py  cleaners.py  doc_builder.py  hf_loader.py  run.py
src/eval/: __init__.py  build_dataset.py  evaluators.py  run_eval.py
src/graph/: __init__.py  graph.py  nodes.py  state.py
src/indexing/: __init__.py  cli_index.py  embedder.py  indexer.py  pinecone_client.py
src/rag/: __init__.py  chains.py  prompts.py  retriever.py  schemas.py
src/utils/: ids.py  llm.py  logging.py  tracing.py
tests/: test_chunking.py  test_graph_routing.py  test_loader.py  test_retrieval.py  test_smoke.py
