[project]
name = "earningscall_rag"
version = "0.1.0"
description = "Agentic RAG over earnings calls with LangChain, LangGraph, LangSmith, and Pinecone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "datasets>=2.20.0",
  "langchain>=0.2.10",
  "langchain-core>=0.2.20",
  "langchain-openai>=0.1.17",
  "langchain-text-splitters>=0.2.2",
  "pinecone>=5.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: marks tests that call external services",
]
